<resources>
    <string name="app_name">GangaPhone</string>
    <string name="menu_msg">Messenger</string>
    <string name="menu_user">My profile</string>
    <string name="menu_back">Go Back</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_login">Login</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="send">Send</string>
    <string name="my_products">My products:</string>
    <string name="add_btn">Add</string>
    <string name="num_views">Views</string>
    <string name="edit_pName">Name:</string>
    <string name="edit_p_new">New Product</string>
    <string name="edit_pPrice">Price:</string>
    <string name="edit_pDesc">Description:</string>
    <string name="edit_pStatus">Status:</string>
    <string name="edit_pSold">Mark as sold</string>
    <string name="edit_pViews">Views on this product: </string>
    <string name="edit_pImages">Images:</string>
    <string name="edit_pImageUpload">Upload</string>
    <string name="edit_pDelete">Remove</string>
    <string name="edit_pSave">Save</string>
    <string name="error_newProduct">ERROR NEW PRODUCT</string>
    <string name="edit_pNoImages">There are no images uploaded</string>
    <string name="req_pName">Name must have more than 5 characters</string>
    <string name="req_pPriceFormat">Price must be a valid number</string>
    <string name="req_pDesc">Description must have more than 10 characters</string>
    <string name="req_pStatus">Please select product\'s status</string>
    <string name="req_pPictures">Please upload at least one picture</string>
    <string name="error_pRemove">Couldn\'t delete the product</string>
    <string name="status_broken">Broken</string>
    <string name="status_new">New</string>
    <string name="status_scratched">Scratched</string>
    <string name="report_intro">Look what I found on GangaPhone</string>
    <string name="productName">Product</string>
    <string name="status">Status</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="publishedDate">Published date</string>
    <string name="description">Description</string>
    <string name="report_end"></string>
    <string name="send_report">Send report</string>
    <string name="conversations">My conversations:</string>
    <string name="apply_new_filter">Apply new filter</string>
    <string name="filter_keyword">Keyword:</string>
    <string name="filter_exKeyword">Example: iPhone X 128GB</string>
    <string name="filter_location">Location:</string>
    <string name="filter_exLocation">Example: London</string>
    <string name="filter_price">Price:</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="filter_minPrice">min</string>
    <string name="filter_maxPrice">max</string>
    <string name="filter_orderBy">Order By:</string>
    <string name="filter_orderLowestPrice">Lowest Price</string>
    <string name="filter_orderHighestPrice">Highest price</string>
    <string name="filter_orderNewestPosts">Newest posts</string>
    <string name="filter_orderOldestPosts">Oldest posts</string>
    <string name="filter_orderFeatured">Featured</string>
    <string name="signIn">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create new account</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="password_rep">Confirm password</string>
    <string name="register">Register</string>
    <string name="contact_seller">Contact seller</string>
    <string name="share">Share</string>
    <string name="app_slogan">Facilitating communication</string>
    <string name="edit_pTitle">Editing product</string>
    <string name="product_details">Product\'s details</string>
    <string name="messenger_subtitle">Messenger</string>
    <string name="chatting">Chatting</string>
    <string name="custom_search">Custom search</string>
    <string name="apply_filter">APPLY FILTER</string>
    <string name="cancel">CANCEL</string>
    <string name="results_found">results found</string>
    <string name="prev">&lt; PREV</string>
    <string name="next">NEXT &gt;</string>
    <string name="newMessageTitle">You\'ve received a new message</string>
    <string name="error_register">Couldn\'t create the account</string>
    <string name="error_registerDuplicated">Already exists and account with this email or username</string>
</resources>